# bilibili-sdk-python

./: .envrc  .flake8  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
bilibili_sdk/: __init__.py
bilibili_sdk/client/: api.py  base.py  member.py
bilibili_sdk/common/: sign.py
bilibili_sdk/config/: settings.py
bilibili_sdk/dto/: __init__.py  acc_info.py  archive.py  base.py  nav.py  online.py
bilibili_sdk/enums/: __init__.py  archive.py
scripts/: login
src/bilibili_sdk/: __init__.py
src/bilibili_sdk/client/: download.py  member.py
src/bilibili_sdk/common/: utils.py
src/bilibili_sdk/config/: settings.py
src/bilibili_sdk/dto/: video_stream.py
src/bilibili_sdk/enums/: archive.py
tests/: common.py  test_utils.py
tests/client/: test_api.py  test_member.py
