[tool.poetry]
name = "bilibili-sdk"
version = "0.1.0"
description = ""
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# wpy = { path = "/Users/wxnacy/Documents/Projects/wxnacy/wpy", develop = true }
wpy = "^0.7.4"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
