[project]
name = "bilibili-sdk"
version = "0.1.2"
description = ""
authors = [
    { name = "wxnacy", email = "wxnacy@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wpy>=0.7.6",
    "pydantic-settings>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bilibili_sdk"]

[dependency-groups]
dev = [
    "hatch>=1.16.2",
]
